--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,10 +23,13 @@
   .section-title {
     @apply text-3xl md:text-[54px] md:leading-[60px] text-center tracking-tighter font-bold bg-gradient-to-b from-black to-[#001E80] text-transparent bg-clip-text;
   }
-  .section-description{
-    @apply text-center text-[22px] leading-[30px] tracking-tighter text-[#010D3E]
+  .section-description {
+    @apply text-center text-[22px] leading-[30px] tracking-tighter text-[#010D3E];
   }
-  .section-heading{
-    @apply max-w-[540px] mx-auto
+  .section-heading {
+    @apply max-w-[540px] mx-auto;
+  }
+  .card {
+    @apply p-10 border border-solid border-[#222222]/10 rounded-3xl shadow-[0_7px_14px_#EAEAEA] max-w-xs w-full;
   }
 }
