--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,19 @@
     @apply bg-black text-white;
   }
   .btn-text {
-    @apply text-black bg-transparent;
+    @apply text-black bg-transparent border border-white/30;
+  }
+  .hover-btn-black {
+    @apply hover:bg-blue-700 hover:shadow-lg hover:scale-105 transition-all ease-linear duration-200;
+  }
+  .hover-btn-transparent {
+    @apply hover:bg-white/10 hover:border-white/50 hover:scale-105 transition-all ease-linear duration-200;
+  }
+  .nav-links{
+    @apply text-black hover:text-blue-600 transition-colors duration-200 hover:scale-105;
+  }
+  .footer-hover {
+    @apply hover:text-white transition ease-in-out duration-300;
   }
   .logo-ticker {
     @apply h-8 w-auto;
